# signBotResources

./: .gitattributes  final_sentences.txt
model/: confusion_matrix.txt  (+1 more)
src/4ne1_gamma_revc_urdf/4ne1_g-10000_primitiv-kinematic_rev.C/: CMakeLists.txt  README.md  package.xml  show_humanoid.py
src/4ne1_gamma_revc_urdf/4ne1_g-10000_primitiv-kinematic_rev.C/config/: joint_names_4ne1_g-10000_primitiv-kinematic_rev.B.yaml
src/4ne1_gamma_revc_urdf/4ne1_g-10000_primitiv-kinematic_rev.C/launch/: display.launch  gazebo.launch
src/4ne1_gamma_revc_urdf/4ne1_g-10000_primitiv-kinematic_rev.C/meshes/: left_hand_base.STL  left_index_1.STL  left_index_2.STL  left_little_1.STL  left_little_2.STL  left_middle_1.STL  left_middle_2.STL  left_ring_1.STL  left_ring_2.STL  left_thumb_1.STL  left_thumb_2.STL  left_thumb_3.STL  left_thumb_4.STL  link_left_ankle_x.STL  link_left_ankle_y.STL  link_left_hip_x.STL  link_left_hip_y.STL  link_left_hip_z.STL  link_left_lower_arm.STL  link_left_shin.STL  link_left_shoulder_x.STL  link_left_shoulder_y.STL  link_left_shoulder_z.STL  link_left_wrist_x.STL  link_left_wrist_y.STL  link_left_wrist_z.STL  link_pelvis.STL  link_right_ankle_x.STL  link_right_ankle_y.STL  link_right_hip_x.STL  link_right_hip_y.STL  link_right_hip_z.STL  link_right_lower_arm.STL  link_right_shin.STL  link_right_shoulder_x.STL  link_right_shoulder_y.STL  link_right_shoulder_z.STL  link_right_wrist_x.STL  link_right_wrist_y.STL  link_right_wrist_z.STL  (+16 more)
src/4ne1_gamma_revc_urdf/4ne1_g-10000_primitiv-kinematic_rev.C/urdf/: 4ne1_g-10000_primitiv-kinematic_rev.C.urdf
(+2690 files in other folders)
